--- a/r4dsexercises/2_wrangle.Rmd
+++ b/r4dsexercises/2_wrangle.Rmd
@@ -94,5 +94,24 @@ library(tidyverse)
     
     
     
+### Exercises: tidyr
+
+1.  Using prose, describe how the variables and observations are organised in
+    each of the sample tables.
+
+1.  Compute the `rate` for `table2`, and `table4a` + `table4b`. 
+    You will need to perform four operations:
+
+    1.  Extract the number of TB cases per country per year.
+    1.  Extract the matching population per country per year.
+    1.  Divide cases by population, and multiply by 10000.
+    1.  Store back in the appropriate place.
+    
+    Which representation is easiest to work with? Which is hardest? Why?
+
+1.  Recreate the plot showing change in cases over time using `table2`
+    instead of `table1`. What do you need to do first?
+    
+    
     
     
